Bug 587369 - [OS/2] let YARR build on OS/2, r=daveryeo, gal